--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,19 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My Little Planet</title>
+	<link rel="stylesheet" href="{{site.baseurl}}/css/common.css">
 </head>
 <body>
 <header>
 	<h1>My Little Planet</h1>
-	<nav>
-		<ul>
-			<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-			<li><a href="{{site.baseurl}}/news.html">News</a></li>
-
-		</ul>
-	</nav>
+	{% include nav.html %}
 </header>
 {{content}}
 
+<footer>
+	{% include nav.html %}
+	<p>All rights resrved to my little planet</p>
+</footer>
 </body>
 </html>
