--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,12 @@
 <body>
 <header>
 	<h1>My Little Planet</h1>
-	{% include nav.html %}
+	{% include nav.html navclass='nav-top' %}
 </header>
 {{content}}
 
 <footer>
-	{% include nav.html %}
+	{% include nav.html navclass='nav-bottom' %}
 	<p>All rights resrved to my little planet</p>
 </footer>
 </body>
