--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
-	<nav>
+	<nav class="nav {{include.navclass}}" >
 		<ul>
-			<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-			<li><a href="{{site.baseurl}}/news.html">News</a></li>
+			<li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %} current {% endif %}">Home</a></li>
+			<li><a href="{{site.baseurl}}/news.html" class="{% if page.url == '/news.html' %} current {% endif %}">News</a></li>
 
 		</ul>
 	</nav>
