--- a/css/common.css
+++ b/css/common.css
@@ -2,5 +2,14 @@ html{
 	margin: 0;
 	padding: 0;
 
-	font: Arial 100%/1.4 Georgia, serif;
+	font: normal 100%/1.4 Georgia, serif;
+}
+
+.current{
+	background-color: #000531;
+	color: #fff; 
+}
+
+.nav-top{
+	font-size: 1.25rem;
 }
