--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>My Little Planet</title>
 	<link rel="stylesheet" href="{{site.baseurl}}/css/common.css">
+	<link rel="stylesheet" href="/forty-jekyll-theme/assets/css/main.css" />
 </head>
 <body>
 <header>
